添加组长会话内容

--- a/source/_posts/当组长质疑你时工作状态时怎么回应.md
+++ b/source/_posts/当组长质疑你时工作状态时怎么回应.md
@@ -15,3 +15,13 @@ tags:
 - 项目从开始到目前收尾阶段不太容易，应该每个人都会想把它给做好，毕竟花掉了大半年时间在里面，都不会愿意草草收尾。如果有问题可以明确提出来，或者让测试提出bug，一定会第一时间去解决的。
 - 写这个回复从晚上9.57收到一直到现在快半夜12点，花了挺多时间，也算是结尾阶段对之前工作的一个思考吧。至于同事、组长、公司怎么认为我，工作积极或者消极怠工，心里自然有杆秤，我能做的就是做好自己应该做的，写好代码，加强沟通，尽量改善别人对我的认可。刚刚说的bug就明天早上再处理吧，晚了要休息，休息好才能解决问题。
 - 本来只是想写下回复，但是嘴笨不知道怎么开口，最后就写成日记形式了，写完感觉也不容易，就发布吧。
+
+>组长：
+很感谢你能花 2 个多小时写回复。沟通很重要你也清楚，我在很后面的时候看了移动端代码的时候才知道 vant 没有正确引用，大量的样式重写覆盖。有人跟我沟通吗？原因能找到吗？你只跟我说过移动端框架不好用，我真的不理解成熟的框架为什么不好用。
+不想多说，做前端基本要求：
+还原度 和 交互。有空看看你自己的页面，和其他业务的比较一下，看看有没有值得自己学习的地方
+
+我：  
+当时觉得Vant不好用一是菜，之前用它做过两个小项目，一直觉得有问题但没有发现，二是浮躁，跟其他人一起抱怨移动端框架难用，没想着找原因。
+交互和还原度确实差很多，也感觉自己现在喜欢写JS，不太喜欢CSS。
+我会多看看别的业务页面，然后看看别人写的代码，统一交互、学习优化下。
