--- a/source/_posts/记项目交接讲解.md
+++ b/source/_posts/记项目交接讲解.md
@@ -2,6 +2,7 @@
 title: 记颐海报销项目交接讲解
 date: 2020-04-17 07:01:36
 categories: 日记
+tags: 工作
 ---
 颐海报销项目从去年九月份开始，到现在终于迎来了尾声。项目过程一波三折，又
 受公司变动、疫情影响，走到现在确实不太容易。
